--- a/samples/list/PageableList-ObservableArray.html
+++ b/samples/list/PageableList-ObservableArray.html
@@ -20,12 +20,23 @@
 		require([
 			"delite/register",
 			"deliteful/list/PageableList", // page level CSS
-		], function (register, PageableList) {
+			"delite/ObservableArray"
+		], function (register, PageableList, ObservableArray) {
 			var list  = register.createElement("d-pageable-list");
 			list.id = "L";
 
-			list.store = [];
+			list.store = new ObservableArray();
 			var arr = [];
+
+			Array.observe(arr, function () {
+				//list.computeProperties();
+				console.log("patate");
+			});
+			Array.observe(list.store, function () {
+				list.computeProperties([]);
+				console.log("pomme");
+			});
+
 
 			for (var i = 0; i < 100; i++) {
 				arr.push({title:"Programmatic item of order " + i});
@@ -37,6 +48,7 @@
 			});
 
 			list.store = arr.slice(0,20);
+			arr.push({title:"soupe"});
 			list.pageLength = 5;
 			list.maxPages = 2;
 
@@ -54,7 +66,7 @@
 </head>
 <body style="display: none" role="application">
 <d-linear-layout style="width: 100%; height: 100%">
-	<h1 class="header"><div>Example to use PageableList with Array</div></h1>
+	<h1 class="header"><div>Example to use PageableList with ObservableArray</div></h1>
 </d-linear-layout>
 </body>
 </html>
