--- a/samples/list/PageableList-SimpleArray.html
+++ b/samples/list/PageableList-SimpleArray.html
@@ -34,6 +34,7 @@
 			list.on("new-query-asked", function() {
 				window.setTimeout(function() {
 					list.store = list.store.concat(arr.slice(list.store.length, list.store.length + 20));},1000);
+				//list.store = list.store.concat(arr.slice(list.store.length, list.store.length + 20));
 			});
 
 			list.store = arr.slice(0,20);
