--- a/samples/list/List-ObservableArray.html
+++ b/samples/list/List-ObservableArray.html
@@ -75,7 +75,7 @@
 			},6000);
 
 			window.setTimeout(function() {
-				list.store[0].title = "Carotte";
+				list.store[0].set("title", "Carotte");
 			},8000);
 
 		});
@@ -83,7 +83,7 @@
 </head>
 <body style="display: none" role="application">
 <d-linear-layout style="width: 100%; height: 100%">
-	<h1 class="header"><div>Example to use PageableList with ObservableArray</div></h1>
+	<h1 class="header"><div>Example to use List with ObservableArray</div></h1>
 </d-linear-layout>
 </body>
 </html>
