--- a/samples/list/PageableList-ObservableArray.html
+++ b/samples/list/PageableList-ObservableArray.html
@@ -63,6 +63,14 @@
 
 			list.placeAt(document.body);
 			document.body.style.display = "";
+
+			window.setTimeout(function() {
+				list.store[0].set("title", "Carotte");
+			},1000);
+
+			window.setTimeout(function() {
+				list.store[12].set("title", "Carotte");
+			},10000);
 		});
 	</script>
 </head>
