add ex with rest

--- a/samples/list/List-ObservableArray.html
+++ b/samples/list/List-ObservableArray.html
@@ -75,7 +75,8 @@
 			},6000);
 
 			window.setTimeout(function() {
-				list.store[0].set("title", "Carotte");
+				list.store[0].title = "Carotte";
+				list.store[0].title = "Patate";
 			},8000);
 
 		});
