--- a/samples/list/List-Rest.html
+++ b/samples/list/List-Rest.html
@@ -28,17 +28,17 @@
 		], function (register, Rest, Trackable, SimpleQuery, declare, List) {
 			var TrackedRestStore = declare([Rest, SimpleQuery, Trackable]);
 			var list  = register.createElement("d-list");
-			list.store = new TrackedRestStore({target:"http://9.128.82.26:3000/book"});
+			list.source = new TrackedRestStore({target:"http://9.128.82.26:3000/book"});
 			list.setAttribute("aria-label", "Sample list that uses attributes for store item to renderer item mapping");
 			list.labelAttr = "title";
 			list.righttextFunc = function (item, store, value) {
 				return item.title.split(" ")[0];
 			};
-			list.store.add({title: "first item"});
-			list.store.add({title: "second item"});
-			list.store.add({title: "third item"});
-			list.store.add({title: "fourth item"});
-			list.store.add({title: "fifth item"});
+			list.source.add({title: "first item"});
+			list.source.add({title: "second item"});
+			list.source.add({title: "third item"});
+			list.source.add({title: "fourth item"});
+			list.source.add({title: "fifth item"});
 			list.placeAt(document.body);
 			document.body.style.display = "";
 		});
