--- a/samples/list/PageableList-ObservableRest.html
+++ b/samples/list/PageableList-ObservableRest.html
@@ -33,9 +33,9 @@
 			});
 			initRequest.then(function (response) {
 				var arr = JSON.parse(response);
-				list.store = new ObservableArray();
+				list.source = new ObservableArray();
 				for (var i = 0; i < arr.length; i++) {
-					list.store.set(i, arr[i]);
+					list.source.set(i, arr[i]);
 				}
 			})
 			list.on("db-add", function(evt) {
@@ -65,10 +65,10 @@
 						var arr = JSON.parse(response);
 						for (var i = reqStart; i < evt.end; i++) {
 							if (arr[i - reqStart]) {
-								list.store.set(i, arr[i - reqStart]);
+								list.source.set(i, arr[i - reqStart]);
 							}
 						}
-						resolve(list.store.slice(evt.start, evt.end));
+						resolve(list.source.slice(evt.start, evt.end));
 					});
 				}))
 			});
@@ -86,9 +86,9 @@
 			document.body.style.display = "";
 
 			window.setTimeout(function() {
-				list.store[0].title = "Pomme";
-				list.store[1].title = "Poire";
-				list.store[2].title = "Banane";
+				list.source[0].title = "Pomme";
+				list.source[1].title = "Poire";
+				list.source[2].title = "Banane";
 			},4000);
 
 		});
